# reqwest-sse

./: .gitignore  Cargo.toml  LICENSE  README.md  devenv.nix
.github/workflows/: ci.yml
examples/: story.rs
src/: error.rs  lib.rs
tests/: e2e.rs
tests/data/: simple_event_stream.sse
